# st-checker

./: .gitignore  CMakeLists.txt  README.md  debug_helper.cpp  debug_helper.h  main.cpp  st-checker.cbp  st-checker.depend  st-checker.layout
analyzer/domain/: Abstract_memory.cpp  Abstract_memory.h  Value_set.cpp  Value_set.h  Var.cpp  Var.h  value_set.cpp  value_set.h  var.cpp  var.h
analyzer/structures/: Bits_vector.cpp  Bits_vector.h  Bits_vector_1.cpp  Bits_vector_1.h  Bits_vector_8.cpp  Bits_vector_8.h  Boolean4.cpp  Boolean4.h  Data_width.h  Strided_interval.cpp  Strided_interval.h  abstract_data.cpp  abstract_data.h  bits_vector.cpp  bits_vector.h  bits_vector_1.hpp  bits_vector_8.hpp  boolean4.cpp  boolean4.h  strided_interval.cpp  strided_interval.h
analyzer/transformer/: Abstract_transfer.cpp  Abstract_transfer.h  abstract_effect.h  abstract_new_value.h  assign_stmt_transfer.cpp  assign_stmt_transfer.h  elif_stmt_transfer.cpp  elif_stmt_transfer.h  if_stmt_transfer.cpp  if_stmt_transfer.h  value_set_transfer.cpp  value_set_transfer.h
bak/: abstract_value.cpp  transfer_semiring.cpp  transfer_semiring.h
builder/flow-graph-builder/: CFG.cpp  CFG.h  CFG_builder.cpp  CFG_builder.h  Edge.cpp  Edge.h  Node.cpp  Node.h
builder/model-builder/: WPDS_builder.cpp  WPDS_builder.h  abstract_new_value.cpp  abstract_new_value.h  cts_builder.cpp  cts_builder.h  transfer_semiring.cpp  transfer_semiring.h  wpds_builder.cpp  wpds_builder.h
files/inputs/: Example_1.st  (+9 more)
inputs/: Example_0.st  Example_1.st  Example_2.st  Example_4.st  transfer_semiring_test.st
ios/: fibonacci-numbers.st  fibonacci-numbers_icfg.dot  input.st  input2.st  output.dot  output_icfg.dot
libs/matiec/absyntax_utils/: CMakeLists.txt
libs/matiec/stage1_2/: CMakeLists.txt  iec_bison.cc  iec_bison.hh  iec_flex.cc  iec_flex.ll
libs/wali/: CMakeLists.txt
libs/wali/wali/: IMergeFn.hpp  KeyPairSource.cpp  KeySpace.cpp  MergeFn.cpp  MergeFn.hpp  SemElemPair.hpp  ShortestPathSemiring.cpp  StringSource.hpp  TaggedWeight.hpp
libs/wali/wali/domains/: BiDomain.hpp
libs/wali/wali/graph/: Graph.cpp
libs/wali/wali/regex/: AllRegex.hpp  Regex.cpp  Star.cpp
libs/wali/wali/util/: Timer.cpp  WeightChanger.hpp
libs/wali/wali/wfa/: DeterminizeWeightGen.hpp  ITrans.cpp  TransFunctor.hpp  WFA-path_summary.cpp
libs/wali/wali/wfa/epr/: EPA.hpp  FunctionalWeight.cpp  FunctionalWeight.hpp  FunctionalWeightMaker.hpp
libs/wali/wali/witness/: VisitorPrinter.cpp  Witness.cpp  WitnessCombine.hpp  WitnessLengthWorklist.hpp  WitnessMerge.hpp  WitnessMergeFn.hpp
libs/wali/wali/wpds/: DebugWPDS.hpp  GenKeySource.hpp  WPDS.hpp  Wrapper.cpp
libs/wali/wali/wpds/ewpds/: ERule.hpp
libs/wali/wali/wpds/fwpds/: SWPDS.cpp
matiec/: in.txt  main.cpp
outputs/: Example 1.st  Example 4.st  Example-4.dot  Example4.dot  Example_2.dot  Example_2.weight  Example_4.dot  Example_4.st  Example_4.wpds  Example_4.wpds1  Example_4_wpds.dot  abc  example.dot  test.dot  transfer_semiring_test.dot  weights.txt
parser/: Absyntax_visitor.cpp  Absyntax_visitor.h  Absyntax_visitor_weight.cpp  Absyntax_visitor_weight.h  ST_parser.cpp  ST_parser.h  parser.cpp  parser.h  utils.cpp  utils.h
parser/matiec/: CMakeLists.txt
parser/matiec/absyntax/: absyntax.cc  absyntax.hh
parser/matiec/stage1_2/: iec_flex.ll  stage1_2.hh
simulator/: abstract_simulator.cpp  abstract_simulator.h
simulator/wali/: CMakeLists.txt  Common.cpp  Common.hpp  Countable.hpp  DefaultWorklist.hpp  Exception.cpp  Exception.hpp  HashMap.hpp  IMarkable.hpp  IMergeFn.cpp  IntSource.cpp  IntSource.hpp  Key.cpp  Key.hpp  KeyContainer.hpp  KeyOrderWorklist.cpp  KeyOrderWorklist.hpp  KeyPairSource.hpp  KeySetSource.hpp  KeySource.hpp  KeySpace.hpp  LongestSaturatingPathSemiring.cpp  LongestSaturatingPathSemiring.hpp  Markable.cpp  Markable.hpp  MergeFnFactory.cpp  MergeFnFactory.hpp  Printable.cpp  PriorityWorklist.hpp  Progress.hpp  QueueWorklist.hpp  RankedWorklist.cpp  RankedWorklist.hpp  Reach.hpp  SemElem.cpp  SemElem.hpp  SemElemPair.cpp  SemElemTensor.cpp  SemElemTensor.hpp  ShortestPathSemiring.hpp  (+8 more)
simulator/wali/details/: PriorityWorklist.boost_heap.cpp  PriorityWorklist.boost_heap.hpp  PriorityWorklist.multiset.cpp  PriorityWorklist.multiset.hpp
simulator/wali/domains/: KeyedSemElemSet.hpp  RepresentativeString.cpp  RepresentativeString.hpp  ReversedSemElem.hpp  SemElemSet.cpp  SemElemSet.hpp  TraceSplitSemElem.hpp
simulator/wali/graph/: Functional.cpp  Functional.hpp  GraphCommon.hpp  InterGraph.cpp  InterGraph.hpp  IntraGraph.cpp  IntraGraph.hpp  LinkEval.cpp  RegExp.cpp  RegExp.hpp  SummaryGraph.cpp  SummaryGraph.hpp
simulator/wali/regex/: Concat.cpp  Concat.hpp  Regex.hpp  Root.cpp  Root.hpp  Star.hpp  Union.cpp  Union.hpp
simulator/wali/util/: ConfigurationVar.hpp  Timer.hpp
simulator/wali/wfa/: DecoratorTrans.hpp  DeterminizeWeightGen.cpp  ITrans.hpp  State.cpp  State.hpp  Trans.cpp  Trans.hpp  TransFunctor.cpp  TransSet.cpp  TransSet.hpp  WFA-eclose.cpp  WFA.cpp  WFA.hpp  WeightMaker.cpp  WeightMaker.hpp
simulator/wali/wfa/epr/: EPA.cpp  FunctionalWeightMaker.cpp  StatePriorityWorklist.hpp
simulator/wali/witness/: CalculatingVisitor.cpp  CalculatingVisitor.hpp  Visitable.hpp  Visitor.cpp  Visitor.hpp  VisitorDot.cpp  VisitorDot.hpp  VisitorPrinter.hpp  Witness.hpp  WitnessCombine.cpp  WitnessExtend.cpp  WitnessExtend.hpp  WitnessLengthWorklist.cpp  WitnessMerge.cpp  WitnessMergeFn.cpp  WitnessRule.cpp  WitnessRule.hpp  WitnessTrans.cpp  WitnessTrans.hpp  WitnessWrapper.cpp  WitnessWrapper.hpp
simulator/wali/wpds/: Config.cpp  Config.hpp  DebugWPDS.cpp  GenKeySource.cpp  LinkedTrans.cpp  LinkedTrans.hpp  Rule.cpp  Rule.hpp  RuleFunctor.cpp  RuleFunctor.hpp  WPDS.cpp  Wrapper.hpp
simulator/wali/wpds/ewpds/: ERule.cpp  ETrans.cpp  ETrans.hpp  EWPDS.cpp  EWPDS.hpp
simulator/wali/wpds/fwpds/: FWPDS.cpp  FWPDS.hpp  LazyTrans.cpp  LazyTrans.hpp  SWPDS.hpp
test/: builder_test.cpp  domain_test.cpp  flow_graph_builder.cpp  flow_graph_builder_test.cpp  structures_test.cpp  transfer_test.cpp
utils/: utils.cpp  utils.h
xmind/: ST-Checer.xmind
(+137 files in other folders)
