cmake_minimum_required(VERSION 3.9)
project(st-checker)

find_package(Boost)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
endif()

set(CMAKE_CXX_STANDARD 11)

add_library(wali
        ./wali/Reach.cpp
        ./wali/StringSource.cpp
        ./wali/Common.cpp
        ./wali/SemElemPair.cpp
        ./wali/KeySpace.cpp
        ./wali/KeySetSource.cpp
        ./wali/TotalOrderWorklist.cpp
        ./wali/KeyOrderWorklist.cpp
        ./wali/RankedWorklist.cpp
        ./wali/ShortestPathWorklist.cpp
        ./wali/SemElem.cpp
        ./wali/SemElemTensor.cpp
        ./wali/Exception.cpp
        ./wali/Printable.cpp
        ./wali/Key.cpp
        ./wali/IntSource.cpp
        ./wali/Markable.cpp
        ./wali/WeightFactory.cpp
        ./wali/KeyPairSource.cpp
        ./wali/IMergeFn.cpp
        ./wali/MergeFn.cpp
        ./wali/MergeFnFactory.cpp
        ./wali/ShortestPathSemiring.cpp
        ./wali/LongestSaturatingPathSemiring.cpp
        ./wali/domains/SemElemSet.cpp
        ./wali/domains/RepresentativeString.cpp
        ./wali/wpds/RuleFunctor.cpp
        ./wali/wpds/Config.cpp
        ./wali/wpds/ewpds/ERule.cpp
        ./wali/wpds/ewpds/ETrans.cpp
        ./wali/wpds/ewpds/EWPDS.cpp
        ./wali/wpds/Rule.cpp
        ./wali/wpds/fwpds/FWPDS.cpp
        ./wali/wpds/fwpds/SWPDS.cpp
        ./wali/wpds/fwpds/LazyTrans.cpp
        ./wali/wpds/Wrapper.cpp
        ./wali/wpds/DebugWPDS.cpp
        ./wali/wpds/WPDS.cpp
        ./wali/wpds/GenKeySource.cpp
        ./wali/wfa/State.cpp
        ./wali/wfa/WFA.cpp
        ./wali/wfa/WFA-eclose.cpp
        ./wali/wfa/WFA-path_summary.cpp
        ./wali/wfa/ITrans.cpp
        ./wali/wfa/Trans.cpp
        ./wali/wfa/WeightMaker.cpp
        ./wali/wfa/TransFunctor.cpp
        ./wali/wfa/TransSet.cpp
        ./wali/wfa/DeterminizeWeightGen.cpp
        ./wali/wfa/epr/EPA.cpp
        ./wali/wfa/epr/FunctionalWeight.cpp
        ./wali/wfa/epr/FunctionalWeightMaker.cpp
        ./wali/witness/WitnessExtend.cpp
        ./wali/witness/WitnessWrapper.cpp
        ./wali/witness/WitnessRule.cpp
        ./wali/witness/Visitor.cpp
        ./wali/witness/CalculatingVisitor.cpp
        ./wali/witness/WitnessMergeFn.cpp
        ./wali/witness/VisitorDot.cpp
        ./wali/witness/WitnessTrans.cpp
        ./wali/witness/VisitorPrinter.cpp
        ./wali/witness/Witness.cpp
        ./wali/witness/WitnessCombine.cpp
        ./wali/witness/WitnessMerge.cpp
        ./wali/witness/WitnessLengthWorklist.cpp
        ./wali/graph/RegExp.cpp
        ./wali/graph/LinkEval.cpp
        ./wali/regex/Concat.cpp
        ./wali/regex/Regex.cpp
        ./wali/regex/Root.cpp
        ./wali/regex/Star.cpp
        ./wali/regex/Union.cpp
        ./wali/util/StringUtils.cpp
        ./wali/util/ParseArgv.cpp
        ./wali/util/Timer.cpp
        ./wali/util/details/Partition.cpp
        ./wali/graph/Functional.cpp
        ./wali/graph/Graph.cpp
        ./wali/graph/IntraGraph.cpp
        ./wali/graph/InterGraph.cpp
        ./wali/graph/SummaryGraph.cpp
        )
target_link_libraries(wali ${Boost_LIBRARIES})